# dummy-monorepo

./: README.md
.coder/: README.md
.coder/.devcontainer-bootstrap/: Dockerfile  devcontainer.json
.coder/.devcontainer-edge/: Dockerfile.dev  devcontainer.json
.coder/edge-os/: Dockerfile  devcontainer.json
customer/customer-dwh-queries/: README.md  pyproject.toml
customer/customer-dwh-queries/customer_dwh_queries/: __main__.py  gsheet.py
customer/gift-fighting-ui/: README.md  pyproject.toml
customer/gift-fighting-ui/gift_fighting_ui/: __init__.py  main.py
