[tool.poetry]
package-mode = false
name = "gift-fighting-ui"
description = "Interface to replace unavailabile gifts in customer baskets"
authors = [
  "David Schouten <david.schouten@teampicnic.com>, Nicolò Bontempi <nicolo.bontempi@teampicnic.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.12.0"
httpx = ">=0.28,<0.29"
uvicorn = "~=0.34.2"
nicegui = { version = "==2.14.1" }
picnic-monitoring = { version = "==4.0.6", extras = ["sentry"] }
picnic-nicegui = "==0.14.0"
picnic-tools = "==1.1.13"
picnic-client = "~=10.1.0"
simple-salesforce = "~=1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
picnic-guide = "==7.8.14"

[[tool.poetry.source]]
name = "picnic"
url = "https://nexus.global.picnicinternational.com/repository/pypi-public/simple/"
priority = "primary"

[tool.picnic-poetry]
set-version = true
